--- a/Project/app/src/main/res/layout/activity_main.xml
+++ b/Project/app/src/main/res/layout/activity_main.xml
@@ -39,16 +39,43 @@
         android:layout_weight="10"
         android:orientation="horizontal"
         >
-		
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="Hello World!"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintLeft_toLeftOf="parent"
-			app:layout_constraintRight_toRightOf="parent"
-			app:layout_constraintTop_toTopOf="parent" />
 
+		<ImageView
+			android:id="@+id/mini_player_image"
+			android:layout_width="24dp"
+			android:layout_height="24dp"
+			android:layout_gravity="center_vertical"
+			android:layout_margin="16dp"
+			android:scaleType="centerCrop"
+			android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
+			tools:ignore="ContentDescription" />
+
+		<TextView
+			android:id="@+id/mini_player_title"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_marginStart="16dp"
+			android:layout_marginLeft="16dp"
+			android:layout_marginEnd="16dp"
+			android:layout_marginRight="16dp"
+			android:layout_weight="1"
+			android:gravity="center_vertical"
+			android:singleLine="true"
+			android:textAlignment="center"
+			android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+			android:textColor="@color/colorAccent"
+			android:textSize="20sp"
+			tools:ignore="RtlCompat" />
+
+		<ImageView
+			android:id="@+id/mini_player_play_pause_button"
+			android:layout_width="40dp"
+			android:layout_height="40dp"
+			android:layout_gravity="center_vertical"
+			android:layout_marginEnd="16dp"
+			android:layout_marginRight="16dp"
+			android:scaleType="center"
+			tools:ignore="ContentDescription" />
 
     </LinearLayout>
 
