--- a/Project/app/src/main/res/layout/adapter_playlist_layout.xml
+++ b/Project/app/src/main/res/layout/adapter_playlist_layout.xml
@@ -10,5 +10,38 @@
     card_view:cardElevation="1dp"
     app:cardCornerRadius="20dp"
     app:cardBackgroundColor="@color/colorPrimary">
-    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/album_image"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/colorPrimary"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:textSize="13sp"
+            android:id="@+id/album_name"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_height="match_parent"
+            android:singleLine="true"
+            android:textColor="#E7DBDB"
+
+            android:text="Unkown"/>
+        <TextView
+            android:textSize="9sp"
+            android:textColor="#E7DBDB"
+            android:id="@+id/album_artist"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:singleLine="true"
+            android:layout_marginLeft="10dp"
+            android:text="Unkown" />
+
+    </LinearLayout>
 </android.support.v7.widget.CardView>
