--- a/Project/app/src/main/res/layout/activity_player.xml
+++ b/Project/app/src/main/res/layout/activity_player.xml
@@ -57,6 +57,68 @@
         </LinearLayout>
 
     </LinearLayout>
-    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:id="@+id/linear1"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="30dp"
+                android:id="@+id/current_time"
+                android:text=""/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="30dp"
+                android:text=""
+                android:id="@+id/total_time" />
+            <SeekBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/seek"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginTop="30dp"/>
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/pause_24dp"
+                android:layout_marginTop="90dp"
+                android:id="@+id/pause"
+                />
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_alignParentLeft="true"
+                android:background="@drawable/previous_24dp"
+                android:layout_marginTop="90dp"
+                android:layout_marginLeft="30dp"
+                android:id="@+id/previous"
+                />
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/next_24dp"
+                android:layout_marginTop="90dp"
+                android:layout_marginRight="30dp"
+                android:id="@+id/next"
+                />
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
