--- a/AFP2/app/src/main/res/layout/adapter_playlist_layout.xml
+++ b/AFP2/app/src/main/res/layout/adapter_playlist_layout.xml
@@ -15,17 +15,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/album_image"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_gravity="center_vertical"
-            android:background="@color/colorPrimary"
-            android:scaleType="centerCrop" />
-
         <TextView
             android:textSize="13sp"
-            android:id="@+id/album_name"
+            android:id="@+id/playlist_name"
             android:layout_width="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_height="match_parent"
@@ -33,15 +25,7 @@
             android:textColor="#E7DBDB"
 
             android:text="Unkown"/>
-        <TextView
-            android:textSize="9sp"
-            android:textColor="#E7DBDB"
-            android:id="@+id/album_artist"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:singleLine="true"
-            android:layout_marginLeft="10dp"
-            android:text="Unkown" />
+
 
     </LinearLayout>
 
