ic_launcher_playicon.png és különféle változatainak elkészítése
Signed-off-by: mac5562 <55428222+mac5562@users.noreply.github.com>

--- a/AFP2/app/src/main/res/layout/activity_main.xml
+++ b/AFP2/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,8 @@
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             android:textColor="@color/colorAccent"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            tools:ignore="RtlCompat" />
 
         <ImageView
             android:id="@+id/mini_player_play_pause_button"
